@@ -2112,7 +2112,12 @@
 - path: js1_5/Regress/regress-156354.js
   cmd: defaultRunMozillaTest :normal, "../shell.js"
 - path: js1_5/Regress/regress-159334.js
-  cmd: defaultRunMozillaTest :normal, "../shell.js"
+  cmd: |
+      if $architecture =~ /x86/i
+          defaultRunMozillaTest :normal, "../shell.js"
+      else
+          skip
+      end
 - path: js1_5/Regress/regress-168347.js
   cmd: defaultRunMozillaTest :normal, "../shell.js"
 - path: js1_5/Regress/regress-170193.js
